# crafting-interpreters-jlox

./: CMakeLists.txt  Lox.java  jlox.java
lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  MANIFEST.MF  Parser.java  Resolver.java  Return.java  Scanner.java  Stmt.java  TokenType.java
tool/: GenerateAst.java  MANIFEST.MF
